# exchange_rates

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: ecb.rs  main.rs  rates.rs  server.rs
