[package]
name = "exchange_rates"
version = "0.1.0"
edition = "2024"

[dependencies]
rmcp               = { version = "0.1", features = ["server", "macros", "transport-io"] }
tokio              = { version = "1", features = ["full"] }
reqwest            = { version = "0.12", features = ["rustls-tls"] }
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
csv                = "1"
schemars           = "0.8"
chrono             = "0.4"
chrono-tz          = "0.10"
anyhow             = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
wiremock = "0.6"
